<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.firstapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_me"
        android:name="com.example.firstapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about_me" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.firstapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_contact" />

    //เพิ่มหน้าAddที่สร้างในlayout/fragment_addเข้ามา
    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.firstapp.ui.add.AddFragment"
        android:label="Add Me"
        tools:layout="@layout/fragment_add" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.firstapp.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
</navigation>